trunk/Archive2/1e/f0aa6e2d5df503/output
main.cpp:31:9: error: template argument for template type parameter must be a type; did you forget 'typename'?
        result_of<F(Args...)>::type,
        ^
main.cpp:7:27: note: template parameter is declared here
template <size_t K, class R, class F, class Tup>
                          ^
1 error generated.
